# ssg

./: pyproject.toml  ssg.py
app2/tests/: test_module2.py  test_module3.py
content/: contact.rst
ssg/: content.py  parsers.py  site.py
