[tool.poetry]
name = "ssg"
version = "0.1.0"
description = ""
authors = ["reza <reza.sorori@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
markdown = "^3.6"
docutils = "^0.21.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
